Fix responsiveness on iPhone 4S portrait.

--- a/app/css/base.sass
+++ b/app/css/base.sass
@@ -88,6 +88,6 @@ a
       padding-left: 20px
       padding-right: 20px
 
-    @media (min-width: 480px) /* Tablet and desktop */
+    @media (min-width: 481px) /* Tablet and desktop */
       padding-left: 40px
       padding-right: 40px
