--- a/app/css/etc.sass
+++ b/app/css/etc.sass
@@ -120,7 +120,7 @@
   box-shadow: none
   border-top: solid 1px rgba(white, 0.1)
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     .details
       +span-columns(6)
     .form
