--- a/app/css/faq.sass
+++ b/app/css/faq.sass
@@ -34,7 +34,7 @@
   // Horizontal line divider
   // -----------------------
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     strong + p
       +hr(before)
         width: 15px
@@ -54,7 +54,7 @@
     +span-columns(4)
     +omega(3n)
 
-  @media (min-width: 480px) and (max-width: 768px) /* Tablet */
+  @media (min-width: 481px) and (max-width: 768px) /* Tablet */
     +span-columns(6)
     +omega(2n)
 
