--- a/app/css/speakers.sass
+++ b/app/css/speakers.sass
@@ -22,7 +22,7 @@
   .heading h2:after
     border-top-color: $yellow
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     .heading
       display: none
 
@@ -165,14 +165,14 @@
       margin-bottom: 0
 
   // Actually, this is set via JS anyway
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     min-height: 750px
 
 .speaker-bio
   background: white
   position: relative
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     max-width: 300px
 
 /* ----------------------------------------------------------------------------------
@@ -237,7 +237,7 @@
     &, img
       border-radius: 50%
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     position: absolute
     top: 0
     right: -140px
@@ -248,7 +248,7 @@
     height: 100%
 
   // Fading thing
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     img
       opacity: 0.3
       +transition(opacity 50ms linear)
@@ -267,7 +267,7 @@
     .info+.info
       padding-top: 0
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     .info
       padding: 20px
     .info+.info
@@ -366,7 +366,7 @@
  */
 
 .speaker-bio .sample-work
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     display: none
 
   height: 250px
@@ -385,7 +385,7 @@
  * fix; no JS required.
  */
 
-@media (min-width: 480px) /* Tablet & Desktop */
+@media (min-width: 481px) /* Tablet & Desktop */
   .mobile
     .speaker
       display: none
