--- a/app/css/tickets.sass
+++ b/app/css/tickets.sass
@@ -23,7 +23,7 @@
   width: 100%
   margin-bottom: $pad/2
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     display: table
     margin-bottom: $pad*2
 
@@ -61,7 +61,7 @@
   // Ornament
   // --------
 
-  @media (min-width: 480px)
+  @media (min-width: 481px)
     .ticket .in:before
       content: ''
       display: block
@@ -85,7 +85,7 @@
       height: 272px
 
   // iPad portrait: simpler
-  @media (min-width: 480px) and (max-width: 768px)
+  @media (min-width: 481px) and (max-width: 768px)
     .ticket .in
       overflow: hidden
     .ticket:first-child .in:before
@@ -105,7 +105,7 @@
     +heading-type
     +respond(font-size, 2.5em, 3.2em, 3.7em)
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     div.info
       border: solid 2px white
       padding: 15px
@@ -116,7 +116,7 @@
     line-height: 1.5
     font-size: 0.9em
 
-    // @media (min-width: 480px) /* Tablet & Desktop */
+    // @media (min-width: 481px) /* Tablet & Desktop */
     //   +hr($position: before)
     //     width: 40px
     //     border-top: solid 1px white
@@ -282,7 +282,7 @@
   li
     margin-bottom: 5px
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     +span-columns(6)
     border-top: solid 1px #ccc
     margin-top: 40px
