--- a/app/css/title.sass
+++ b/app/css/title.sass
@@ -66,7 +66,7 @@
     text-shadow: none
 
   // White background on desktop
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     +navbar-box
     padding: 10px
     box-shadow: 0 1px 2px rgba(black, 0.2)
@@ -79,7 +79,7 @@
       display: none
 
   // Positioning
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     position: absolute
     top: 40px
     right: 40px
@@ -117,7 +117,7 @@ $line-color: saturate(mix($beige, $red, 50%), 80%)
     line-height: 1.4
     padding-bottom: $pad
 
-  @media (min-width: 480px) /* Tablet & Desktop */
+  @media (min-width: 481px) /* Tablet & Desktop */
     padding-bottom: $pad*2
 
   em, strong
@@ -149,7 +149,7 @@ $line-color: saturate(mix($beige, $red, 50%), 80%)
     & /* Mobile */
       +span-columns(4 of 8)
 
-    @media (min-width: 480px) /* Tablet */
+    @media (min-width: 481px) /* Tablet */
       +span-columns(4 of 12)
 
     @media (min-width: 769px) /* Desktop */
@@ -164,7 +164,7 @@ $line-color: saturate(mix($beige, $red, 50%), 80%)
     @media (max-width: 480px) /* Mobile */
       margin-right: 0
 
-    @media (min-width: 480px) /* Tablet */
+    @media (min-width: 481px) /* Tablet */
       +span-columns(8 of 12)
 
     @media (min-width: 769px) /* Desktop */
